--- a/VotePlatform/Views/Votes/Vote.cshtml
+++ b/VotePlatform/Views/Votes/Vote.cshtml
@@ -1,13 +1,5 @@
-﻿@using VotePlatform.ViewModels.Votes;
-@model DemoVote
-@{
-    Layout = null;
-}
-<!DOCTYPE html>
+﻿@model DemoVote
 
-<html>
-<body>
+
     <h1> @Model.title</h1>
     <h2>@Model.description</h2>
-</body>
-</html>
