--- a/VotePlatform/Views/Votes/Vote.cshtml
+++ b/VotePlatform/Views/Votes/Vote.cshtml
@@ -15,35 +15,35 @@
         @{
             for (int i = 0; i < Model.answersMetas.Count; i++)
             {
-
-
                 var idRes = $"{Convert.ToString(i)}";
 
-                if (Model.type == VoteType.AloneAswer)
+                if (Model.isVotingAccessible)
                 {
-                    <input type="radio" id=@idRes name="vote" value=@idRes>
+                    if (Model.type == VoteType.AloneAswer)
+                    {
+                        <input type="radio" id=@idRes name="vote" value=@idRes>
+                    }
+                    else if (Model.type == VoteType.SomeAnswers)
+                    {
+                        <input type="checkbox" id=@idRes name=@idRes value=@idRes>
+                    }
+                    else if (Model.type == VoteType.PreferVote)
+                    {
+                        <input type="number" id=@idRes name=@idRes value=@idRes>
+                    }
                 }
-                else if (Model.type == VoteType.SomeAnswers)
-                {
-                    <input type="checkbox" id=@idRes name=@idRes value=@idRes>
-                }
-                else if (Model.type == VoteType.PreferVote)
-                {
-                    <input type="number" id=@idRes name=@idRes value=@idRes>
-               }
-        
 
-        <label for=@idRes> @Model.answersMetas[i].Header</label>
+                <label for=@idRes> @Model.answersMetas[i].Header</label>
         
-        <h2> </h2>
+                <h2> </h2>
 
-       <label for =@idRes> @Model.answersMetas[i].Description</label>
+                <label for =@idRes> @Model.answersMetas[i].Description</label>
        
                 <h2> </h2>
 
                 if (Model.simpleResults[0] != 0)
                 {
-                var res = $"{Convert.ToString(Model.simpleResults[i])} голосов.";
+                    var res = $"{Convert.ToString(Model.simpleResults[i])} голосов.";
 
                 if (Model.attributes.IsAnonimousVote)
                 {
@@ -55,10 +55,10 @@
                 }
                 <h6> </h6>
             }
-            }
+    }
 
 
-        }      
+}      
     </div>
     @{
         if (Model.isVotingAccessible)
