--- a/VotePlatform/Views/Shared/_Layout.cshtml
+++ b/VotePlatform/Views/Shared/_Layout.cshtml
@@ -4,6 +4,8 @@
 <head>
     <meta name="viewport" content="width=device-width" />
     <title>@ViewBag.Title</title>
+    <link rel="stylesheet" href="~/css/bootstrap.min.css" asp-append-version="true" />
+    <script src="~/js/bootstrap.min.js" asp-append-version="true"></script>
 </head>
 <body>
     <div>
