--- a/VotePlatform/Views/Votes/Vote.cshtml
+++ b/VotePlatform/Views/Votes/Vote.cshtml
@@ -107,7 +107,7 @@
 </div>
 @{
     //кнопка отправки голоса
-    if (Model.isVotingAccessible && Model.isCancellationPossible == false)
+    if (Model.isVotingAccessible && (Model.isCancellationPossible == false))
     {
         <div>
             <input type="submit" value="Проголосовать" />
