--- a/VotePlatform/Views/Votes/Vote.cshtml
+++ b/VotePlatform/Views/Votes/Vote.cshtml
@@ -5,20 +5,20 @@
 
 @*хуеверть эти данные для разработки разных сценариев*@
 @{
-    Model.isAvailable = true;
-    Model.type = VoteType.PreferVote;
-    Model.isVotingAccessible = true;
-    Model.isActualResultAccessible = true;
-    Model.isDynamicResultAccessible = true;
+    //Model.isAvailable = true;
+    //Model.type = VoteType.PreferVote;
+    //Model.isVotingAccessible = true;
+    //Model.isActualResultAccessible = true;
+    //Model.isDynamicResultAccessible = true;
+    //Model.isCancellationPossible = false;
     bool isAnonimousVote = false;
-    Model.isCancellationPossible = false;
 }
 @*.............*@
 
 @*хуеверть эти данные для того чтобы менять результаты голосования, количество цифр должно совпадать с количеством ответов в голосовании (Model.answersMetas.Count) иначе краш*@
 @{
-    Model.userVoice = new List<int> (){0,0,1,0};
-    Model.simpleResults =  new List<int> (){5,10,100,500};
+    //Model.userVoice = new List<int> (){0,0,1,0};
+    //Model.simpleResults =  new List<int> (){5,10,100,500};
 }
 @*.............*@
 
