--- a/VotePlatform/Views/Votes/Vote.cshtml
+++ b/VotePlatform/Views/Votes/Vote.cshtml
@@ -88,7 +88,7 @@
         <h2> </h2>
 
         //отображение актуальных результатов голосования для каждого ответа
-        if (Model.simpleResults[0] != 0)
+        if (Model.simpleResults[i] != 0)
         {
             var res = $"{Convert.ToString(Model.simpleResults[i])} голосов.";
 
