--- a/VotePlatform/Views/Shared/_Layout.cshtml
+++ b/VotePlatform/Views/Shared/_Layout.cshtml
@@ -24,17 +24,66 @@
             background-color: rgb(100, 100, 255);
         }
 
+        .btn-secondary {
+            background-color: rgb(100, 100, 100);
+        }
+
+        .btn-sled {
+            width: 180px;
+            hight: 10px;
+        }
+
+        .positioned {
+            margin-left: 85%;
+        }
+
+        .pos {
+            margin-left: 85%;
+        }
+
         .card {
             border-radius: 1em;
             text-align: center;
             background-color: rgb(255, 255, 255);
             padding: 0.5em;
         }
+
+        .card-voice {
+            border-radius: 1em;
+            text-align: center;
+            background-color: rgb(200, 255, 200);
+            padding: 0.5em;
+        }
     </style>
 </head>
-<body>
-    <div>
-        @RenderBody()
-    </div>
-</body>
+    <body class="fon">
+    <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
+        <div class="container">
+            <a class="navbar-brand p-0" href="/">
+                <img src="..." alt="Фотку крутую поставить" width="120" />
+            </a>
+            <button class="navbar-toggler"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#navbarNav"
+                    aria-controls="navbarNav"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    @*<li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/">Home</a>
+                    </li>
+                    <li class="nav-item active">
+                    <a class="nav-link" href="Video.html">Video</a>
+                    </li>*@
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+    @RenderBody()
+    </body>
 </html>
