--- a/VotePlatform/Views/Votes/Voting.cshtml
+++ b/VotePlatform/Views/Votes/Voting.cshtml
@@ -41,7 +41,7 @@
                 }
             }
             <a>Голосовавших: @Model.countVoters</a>
-            <p>@Model.attributesStr</p>
+            <p>@Model.AttributesStr</p>
             <p>@Model.meta.Header</p>
             <p>@Model.meta.Description</p>
 
