--- a/VotePlatform/Views/Votes/Voting.cshtml
+++ b/VotePlatform/Views/Votes/Voting.cshtml
@@ -53,103 +53,61 @@
                         for (int i = 0; i < Model.answersMetas.Count; i++)
                         {
                             //отображение текущего голоса пользователя, смотрящего страницу
-                            if (Model.userVoice[i] > 0)
-                            {
-                                <div class="card card-voice my-4">
-                                    @{
-                                        var idRes = $"{Convert.ToString(i)}";
+                            string tagAnswerSelection = string.Empty;
+                            if (Model.userVoice[i] > 0) { tagAnswerSelection = "card-voice"; }
+                            <div class="card @tagAnswerSelection my-4">
 
-                                        //в зависимости от типа голосования берутся разные inputы
-                                        if (Model.isVotingAccessible)
+                                @{
+                                    var idRes = $"{Convert.ToString(i)}";
+
+                                    //отображение степени предпочтения
+                                    if (((Model.isVotingAccessible && (Model.isCancellationPossible == false)) == false) && Model.type == VoteType.PreferVote && (Model.userVoice[i] > 0))
+                                    {
+                                        var preferValue = Convert.ToString(Model.userVoice[i]);
+                                        <a>@preferValue</a>
+                                    }
+
+                                    //в зависимости от типа голосования берутся разные inputы
+                                    if (Model.isVotingAccessible && (Model.isCancellationPossible == false))
+                                    {
+                                        if (Model.type == VoteType.AloneAswer)
                                         {
-                                            if (Model.type == VoteType.AloneAswer)
-                                            {
-                                                <input type="radio" id=@idRes name="vote" value=@idRes>
-                                            }
-                                            else if (Model.type == VoteType.SomeAnswers)
-                                            {
-                                                <input type="checkbox" id=@idRes name=@idRes value=@idRes>
-                                            }
-                                            else if (Model.type == VoteType.PreferVote)
-                                            {
-                                                <input type="number" id=@idRes name=@idRes value=@idRes>
-                                            }
+                                            <input type="radio" id=@idRes name="vote" value=@idRes>
                                         }
-
-                                        //само тело варианта ответа
-                                        <label for=@idRes> @Model.answersMetas[i].Header</label>
-
-                                        <h2> </h2>
-
-                                        <label for=@idRes> @Model.answersMetas[i].Description</label>
-
-                                        //отображение актуальных результатов голосования для каждого ответа
-                                        if (Model.simpleResults[0] != 0)
+                                        else if (Model.type == VoteType.SomeAnswers)
                                         {
-                                            var res = $"{Convert.ToString(Model.simpleResults[i])} голосов.";
-
-                                            if (isAnonimousVote)
-                                            {
-                                                <label>@res</label>
-                                            }
-                                            else
-                                            {
-                                                var votersRef = $"{Model.urlToVoters}{idRes}";
-                                                <a class="btn btn-secondary btn-sled pos" href=@votersRef target="_blank">@res</a>
-                                            }
+                                            <input type="checkbox" id=@idRes name=@idRes value=@idRes>
+                                        }
+                                        else if (Model.type == VoteType.PreferVote)
+                                        {
+                                            <input type="number" id=@idRes name=@idRes value="0">
                                         }
                                     }
-                                </div>
-                            }
-                            else
-                            {
-                                <div class="card my-4">
-                                    @{
-                                        var idRes = $"{Convert.ToString(i)}";
 
-                                        //в зависимости от типа голосования берутся разные inputы
-                                        if (Model.isVotingAccessible)
+                                    //само тело варианта ответа
+                                    <label for=@idRes> @Model.answersMetas[i].Header</label>
+
+                                    <h2> </h2>
+
+                                    <label for=@idRes> @Model.answersMetas[i].Description</label>
+
+                                    //отображение актуальных результатов голосования для каждого ответа
+                                    if (Model.simpleResults[i] != 0)
+                                    {
+                                        var res = $"{Convert.ToString(Model.simpleResults[i])} голосов.";
+
+                                        if (isAnonimousVote)
                                         {
-                                            if (Model.type == VoteType.AloneAswer)
-                                            {
-                                                <input type="radio" id=@idRes name="vote" value=@idRes>
-                                            }
-                                            else if (Model.type == VoteType.SomeAnswers)
-                                            {
-                                                <input type="checkbox" id=@idRes name=@idRes value="100">
-                                            }
-                                            else if (Model.type == VoteType.PreferVote)
-                                            {
-                                                <input type="number" id=@idRes name=@idRes>
-                                            }
+                                            <label>@res</label>
                                         }
-
-                                        //само тело варианта ответа
-                                        <label for=@idRes> @Model.answersMetas[i].Header</label>
-
-                                        <h2> </h2>
-
-                                        <label for=@idRes> @Model.answersMetas[i].Description</label>
-
-                                        //отображение актуальных результатов голосования для каждого ответа
-                                        if (Model.simpleResults[i] != 0)
+                                        else
                                         {
-                                            var res = $"{Convert.ToString(Model.simpleResults[i])} голосов.";
-
-                                            if (isAnonimousVote)
-                                            {
-                                                <label>@res</label>
-                                            }
-                                            else
-                                            {
-                                                var votersRef = $"{Model.urlToVoters}{idRes}";
-                                                <a class="btn btn-secondary btn-sled pos" href=@votersRef target="_blank">@res</a>
-                                            }
+                                            var votersRef = $"{Model.urlToVoters}{idRes}";
+                                            <a class="btn btn-secondary btn-sled pos" href=@votersRef target="_blank">@res</a>
                                         }
                                     }
-                                </div>
-                            }
-
+                                }
+                            </div>
                         }
                     }
                 </div>
