не работает и похуй

--- a/VotePlatform/Views/Shared/_Layout.cshtml
+++ b/VotePlatform/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
 
         .btn-sled {
             width: 180px;
-            hight: 10px;
+            /*height : 40px;*/
         }
 
         .positioned {
