--- a/VotePlatform/Views/Votes/Voting.cshtml
+++ b/VotePlatform/Views/Votes/Voting.cshtml
@@ -1,7 +1,4 @@
-﻿@using VotePlatform.Models.Votes;
-@using System;
-@using System.Collections.Generic;
-@model MainVote
+﻿@model MainVote
 @{
     bool isAnonimousVote = Model.attributes.IsAnonimousVote;
 }
