--- a/VotePlatform/Views/_ViewImports.cshtml
+++ b/VotePlatform/Views/_ViewImports.cshtml
@@ -2,3 +2,8 @@
 @using VotePlatform.ViewModels.Organizations;
 @using VotePlatform.ViewModels.Users;
 @using VotePlatform.ViewModels;
+
+@using VotePlatform.Models.Votes;
+
+@using System;
+@using System.Collections.Generic;
