--- a/VotePlatform/Views/Shared/_Layout.cshtml
+++ b/VotePlatform/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    
+
     <title>@ViewBag.Title</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -24,6 +24,7 @@
 
         .btn-primary {
             background-color: rgb(100, 100, 255);
+            width: 20%;
         }
 
         .btn-secondary {
@@ -31,8 +32,7 @@
         }
 
         .btn-sled {
-            width: 180px;
-            /*height : 40px;*/
+            width: 15%;
         }
 
         .positioned {
@@ -40,13 +40,13 @@
         }
 
         .pos {
-            margin-left: 85%;
+            margin-left: 5%;
         }
 
         .card {
             border-radius: 1em;
             text-align: center;
-            background-color: rgb(255, 255, 255);
+            background-color: rgb(230, 230, 255);
             padding: 0.5em;
         }
 
@@ -56,9 +56,23 @@
             background-color: rgb(200, 255, 200);
             padding: 0.5em;
         }
+
+        .card-obsh {
+            border-radius: 1em;
+            text-align: center;
+            background-color: rgb(225, 225, 255);
+            padding: 0.5em;
+        }
+
+        .card-netu {
+            border-radius: 1em;
+            text-align: center;
+            background-color: rgb(255, 200, 200);
+            padding: 0.5em;
+        }
     </style>
 </head>
-    <body class="fon">
+<body class="fon">
     <nav class="navbar navbar-dark bg-dark navbar-expand-lg">
         <div class="container">
             <a class="navbar-brand p-0" href="/">
@@ -87,5 +101,5 @@
     </nav>
 
     @RenderBody()
-    </body>
+</body>
 </html>
